--- a/sortTable2/index.html
+++ b/sortTable2/index.html
@@ -27,6 +27,10 @@
       
       <h2>Star Wars</h2>
 
+      {{#if things.cool === "anna"}}
+        <h3>Things is true</h3>
+      {{/if}}
+
       <table>
         <thead>
           <tr>
@@ -34,13 +38,28 @@
               #
             </th>
             <th on-click="sort:name">
-              Character <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              Character 
+              {{#if previousSorts.name === "asc"}}
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              {{else}}
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+              {{/if}}
             </th>
             <th on-click="sort:realname">
-              Actor <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              Actor
+              {{#if (previousSorts.realname === "asc" || previousSorts.realname === null) }}
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              {{else}}
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+              {{/if}}
             </th>
             <th on-click="sort:power">
-              Power <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              Power
+              {{#if (previousSorts.power === "asc" || previousSorts.power === null) }}
+                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+              {{else}}
+                <i class="fa fa-chevron-up" aria-hidden="true"></i>
+              {{/if}}
             </th>
           </tr>
         </thead>
